# bhutan

./: .dockerignore  .env.production  .env.render.example  .gitignore  CRITICAL_FIXES.md  Chat_sentiment_analysis.py  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.free  FIXES_SUMMARY.md  MEMORY_OPTIMIZATION.md  Makefile  README.md  RENDER_DEPLOYMENT.md  app.py  app_render.py  config_manager.py  deploy.sh  deploy_render.py  deploy_to_render.sh  docker-compose.dev.yml  docker-compose.yml  fastapi_app.py  gunicorn.conf.py  logging_config.py  main.py  nginx.conf  nginx_proxy.py  opensource_rag.py  opensource_stt.py  pyproject.toml  rag_grader_agent.ipynb  render.yaml  render_start.py  requirements.prod.txt  requirements.render.free.txt  requirements.render.lite.txt  requirements.render.txt  requirements.txt  requirements_minimal.txt  (+13 more)
.github/workflows/: ci-cd.yml
agents/: agent_decision.py  shared_rag.py
agents/rag_agent/: UNUSED_evaluation.py  __init__.py  data_ingestion.py  document_processor.py  query_processor.py  reranker.py  response_generator.py  vector_store.py
agents/web_search_processor_agent/: __init__.py  geminai_search.py  web_search_agent.py  web_search_processor.py
chat_sessions/: chat_Harsh Narayan_20250802_165208.json  chat_Harsh Narayan_20250804_163618.json  chat_string_string.json
config/: config.py  rag.yaml
crew_ai/: README.md  chatbot.py  config.py  data_retriever_util.py  fastapi_integration.py  full_chat_flow.py  llm_setup.py  questionnaire.json  questionnaire.py  tools.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml
models/: chat_session.py  user.py
scripts/db/: create_article_tables.py  create_extensions.py  create_user_tables.py  encrypt_passwords.py  seed_data_helplines_organizations.py  session.py
scripts/ingest/: upload_articles_from_bucket.py  upload_files_to_bucket.py
scripts/migration_schemas/: resources_models.py  user_models.py
static/: mediaabout.css  mediahome.css  styleChatBotUI.css  styleabout.css  styleassessment.css  stylehome.css
survey_data/: survey_20250626_143630_Harsh_Narayan.json  survey_20250707_185716_Harsh_Narayan.json  survey_20250730_173819_Harsh_Narayan.json  survey_20250731_141528_Rohit_Kumar.json
templates/: ChatbotUI.html  aboutt.html  assessment.html  home.html  initial_survey.html  user_dashboard.html
