[project]
name = "mental-health-status-prediction-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.0.0",
    "aiofiles>=24.1.0",
    "altair==5.1.2",
    "astunparse==1.6.3",
    "attrs==23.1.0",
    "bcrypt>=4.3.0",
    "blinker==1.6.3",
    "cachetools==5.3.1",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "crewai>=0.10.0",
    "crewai-tools>=0.0.1",
    "dia>=0.1.8",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "edge-tts>=6.1.9",
    "elevenlabs>=2.3.0",
    "fastapi>=0.115.12",
    "flask>=3.0.3",
    "flatbuffers==23.5.26",
    "gast==0.5.4",
    "gitdb==4.0.11",
    "gitpython==3.1.40",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-pasta==0.2.0",
    "grpcio==1.59.2",
    "gtts>=2.5.4",
    "guardrails-ai>=0.4.5",
    "h5py==3.10.0",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "jinja2==3.1.2",
    "joblib==1.3.2",
    "jsonschema==4.19.1",
    "jsonschema-specifications==2023.7.1",
    "keras==2.15.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.0.1",
    "langgraph>=0.0.24",
    "libclang==16.0.6",
    "markdown==3.5.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.3",
    "matplotlib>=3.10.3",
    "mdurl==0.1.2",
    "ml-dtypes==0.2.0",
    "nltk>=3.9.1",
    "numpy==1.26.1",
    "oauthlib==3.2.2",
    "openai-whisper>=20250625",
    "opt-einsum==3.3.0",
    "packaging==23.2",
    "pandas==2.1.1",
    "pillow==10.1.0",
    "protobuf==4.23.4",
    "psycopg2-binary>=2.9.10",
    "pyarrow==13.0.0",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pydantic[email]>=2.7.4",
    "pydeck==0.8.1b0",
    "pygments==2.16.1",
    "pypdf2>=3.0.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12.1",
    "referencing==0.30.2",
    "reportlab>=4.4.1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rich==13.6.0",
    "rpds-py==0.10.6",
    "rsa==4.9",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "soundfile>=0.13.1",
    "st-pages==0.4.5",
    "streamlit==1.27.2",
    "streamlit-lottie==0.0.5",
    "tenacity==8.2.3",
    "tensorboard==2.15.1",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "termcolor==2.3.0",
    "textblob>=0.19.0",
    "threadpoolctl==3.2.0",
    "toml==0.10.2",
    "toolz==0.12.0",
    "tornado==6.3.3",
    "typing-extensions==4.8.0",
    "tzdata==2023.3",
    "tzlocal==5.1",
    "urllib3==2.0.7",
    "uvicorn>=0.34.2",
    "vadersentiment>=3.3.2",
    "validators==0.22.0",
    "watchdog==3.0.0",
    "werkzeug==3.0.1",
    "whisper>=1.1.10",
    "wrapt==1.14.1",
    "zipp==3.17.0",
]
